--- a/home.html
+++ b/home.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Campus Connect</title>
     <link rel="stylesheet" href="home.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="head">
         <div class="top-div">
             <section class="topic">
-            <a href="home.html">CAMPUS<br>CONNECT</a>
+                <a href="home.html">CAMPUS<br><strong>CONNECT</strong></a>
             </section>
             <section class="menu-date">
-                <h4> </h4>  
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="speaker.html">Speakers</a></li>
@@ -26,37 +25,36 @@
             </section>
         </div>
         <section class="register-content">
-            <h>Dedicated to the Masters of tomorrow</h>
-            <p>To those who aspire to inspire, the right platform for you</br>
-Find the right help, right path and a bright future through us.</p>
-                   </section>
+            <h2>Dedicated to the Masters of Tomorrow</h2>
+            <p>To those who aspire to inspire, the right platform for you.<br>
+            Find the right help, right path and a bright future through us.</p>
+        </section>
     </header>
     <main class="main">
-       <div class="flex-content">
-           <h>SPEAKERS</h>
-           <img src="images/speakers.jpg" alt="speaker" width="280px" height="198px"/>
-           <a href="speaker.html">World-Class Speakers</a>
-           <p>Joining us from all around the world are fantastic speakers, here to share their stories.
-        </p>
-       </div>
-       <div class="flex-content">
-        <h>EASY ACCESS</h>
-        <img src="images/schedule.jpg" alt="schedule" width="280px" height="198px"/>
-        <a href="register.html"> Choose it yourself </a>
-        <p>The speakers will update every month about their schedule and you can book them on the dates you want     </p>
-    </div>
-   </main>
-<footer class="foot">
-    <section class="foot-1" >
-           <p>Campus connect</p>
-    </section>
-    <section class="foot-2">
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="speaker.html">Speakers</a></li>
-                       <li><a href="register.html">Register</a></li>
-        </ul>
-    </section>
-</footer>
+        <div class="flex-content">
+            <h2>SPEAKERS</h2>
+            <img src="images/speakers.jpg" alt="Guest speaker at Campus Connect event" width="280" height="198"/>
+            <a href="speaker.html">World-Class Speakers</a>
+            <p>Joining us from all around the world are fantastic speakers, here to share their stories.</p>
+        </div>
+        <div class="flex-content">
+            <h2>EASY ACCESS</h2>
+            <img src="images/schedule.jpg" alt="Event schedule for speaker sessions" width="280" height="198"/>
+            <a href="register.html">Choose it yourself</a>
+            <p>The speakers will update every month about their schedule and you can book them on the dates you want.</p>
+        </div>
+    </main>
+    <footer class="foot">
+        <section class="foot-1">
+            <p>Campus Connect</p>
+        </section>
+        <section class="foot-2">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="speaker.html">Speakers</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
+        </section>
+    </footer>
 </body>
 </html>
