--- a/register.html
+++ b/register.html
@@ -14,11 +14,11 @@
     <header class="head">
         <div class="top-div">
             <section class="topic">
-                <a href="home.html">CAMPUS<br><strong>CONNECT</strong></a>
+                <a href="index.html">CAMPUS<br><strong>CONNECT</strong></a>
             </section>
             <section class="menu-date">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="speaker.html">Speakers</a></li>
                     <li><a href="register.html">Register</a></li>
                 </ul>
