--- a/speaker.html
+++ b/speaker.html
@@ -13,11 +13,11 @@
     <header class="head">
         <div class="top-div">
             <section class="topic">
-                <a href="home.html">CAMPUS<br><strong>CONNECT</strong></a>
+                <a href="index.html">CAMPUS<br><strong>CONNECT</strong></a>
             </section>
             <section class="menu-date">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="speaker.html">Speakers</a></li>
                     <li><a href="register.html">Register</a></li>
                 </ul>
@@ -33,7 +33,6 @@
     </section>
 
     <main class="main-content">
-        <!-- Speaker 1 -->
         <section class="bio-speaker" id="speaker-1">
             <div class="div-content">
                 <h2>Deepak Garg</h2>
@@ -59,7 +58,7 @@
         </section>
         <section class="foot-2">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="speaker.html">Speakers</a></li>
                 <li><a href="register.html">Register</a></li>
             </ul>
