--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Connect</title>
-    <link rel="stylesheet" href="home.css"/>
+    <link rel="stylesheet" href="index.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -14,11 +14,11 @@
     <header class="head">
         <div class="top-div">
             <section class="topic">
-                <a href="home.html">CAMPUS<br><strong>CONNECT</strong></a>
+                <a href="index.html">CAMPUS<br><strong>CONNECT</strong></a>
             </section>
             <section class="menu-date">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="speaker.html">Speakers</a></li>
                     <li><a href="register.html">Register</a></li>
                 </ul>
@@ -50,7 +50,7 @@
         </section>
         <section class="foot-2">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="speaker.html">Speakers</a></li>
                 <li><a href="register.html">Register</a></li>
             </ul>
