--- a/register.html
+++ b/register.html
@@ -78,7 +78,7 @@
         </section>
         <section class="foot-2">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="speaker.html">Speakers</a></li>
                 <li><a href="register.html">Register</a></li>
             </ul>
