--- a/register.html
+++ b/register.html
@@ -1,89 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Connect - Register</title>
-    <link rel="stylesheet" href="register.css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register | Campus Connect</title>
+  <link rel="stylesheet" href="register.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Open Sans Condensed', sans-serif;
+      background-color: #fefefe;
+      color: #222;
+    }
+  </style>
 </head>
 <body>
-    <header class="head">
-        <div class="top-div">
-            <section class="topic">
-                <a href="index.html">CAMPUS<br><strong>CONNECT</strong></a>
-            </section>
-            <section class="menu-date">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="speaker.html">Speakers</a></li>
-                    <li><a href="register.html">Register</a></li>
-                </ul>
-            </section>
-        </div>
-    </header>
+  <header class="head">
+    <div class="top-div">
+      <section class="topic">
+        <a href="index.html">CAMPUS<br><strong>CONNECT</strong></a>
+      </section>
+      <section class="menu-date">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="speaker.html">Speakers</a></li>
+          <li><a href="register.html">Register</a></li>
+        </ul>
+      </section>
+    </div>
+  </header>
 
-    <section class="register-div">
-        <div class="register-info">
-            <h2>Register</h2>
-            <p>50+ SUCCESSFUL SPEAKER SESSIONS</p>
-            <p>Cost of speakers varies from free to ₹50,000. One of the best-value packages available.</p>
-        </div>
+  <section class="register-div">
+    <div class="register-info">
+      <h2>Register</h2>
+      <p>50+ SUCCESSFUL SPEAKER SESSIONS</p>
+      <p>Cost of speakers varies from free to ₹50k. One of the best packages you’ll find.</p>
+    </div>
+  </section>
+
+  <main class="main-content">
+    <section class="section-one">
+      <div class="upper-content">
+        <h3>Book a Meeting</h3>
+        <h4>Meet our team & book your speaker</h4>
+        <p>Fill in your details using the form. Multiple bookings are allowed. We’ll follow up with a confirmation email.</p>
+      </div>
+      <div class="lower-content">
+        <h3>Why Us?</h3>
+        <ul>
+          <li>Over 150 world-class speakers</li>
+          <li>Hosted 50+ successful speaker events</li>
+          <li>Industry experts, flexible timing</li>
+        </ul>
+      </div>
     </section>
 
-    <main class="main-content">
-        <section class="section-one">
-            <div class="upper-content">
-                <h3>Book a Meeting</h3>
-                <h4>Meet our team and reserve your speaker</h4>
-                <p>Fill in your details using the form. Multiple bookings are allowed. Once submitted, we’ll follow up with details via email.</p>
-            </div>
-            <div class="lower-content">
-                <h3>Why Us?</h3>
-                <ul>
-                    <li>Access to over 150 world-class speakers</li>
-                    <li>Hosted 50+ successful speaker events</li>
-                    <li>Book industrial experts at your place and time</li>
-                </ul>
-            </div>
-        </section>
+    <section class="section-form">
+      <div>
+        <label for="name">Name</label>
+        <input type="text" required id="name" name="user_name" placeholder="Full Name">
+      </div>
+      <div>
+        <label for="email">Email</label>
+        <input type="email" required id="email" name="email" placeholder="Email Address">
+      </div>
+      <div>
+        <label for="comments">Comments</label>
+        <textarea id="comments" name="comments" placeholder="Write anything..." rows="4"></textarea>
+      </div>
+      <div>
+        <button id="button" type="submit">Request</button>
+      </div>
+    </section>
+  </main>
 
-        <section class="section-form">
-            <form action="#" method="POST">
-                <div>
-                    <label class="label" for="name">Name</label>
-                    <input class="insert" type="text" required id="name" name="user_name" placeholder="Full Name">
-                </div>
-                <div>
-                    <label class="label" for="email">Email</label>
-                    <input class="insert" type="email" required id="email" name="email" placeholder="Email Address">
-                </div>
-                <div>
-                    <label class="label" for="comments">Comments</label>
-                    <textarea class="insert" id="comments" name="comments" placeholder="Your message or preferences..."></textarea>
-                </div>
-                <div>
-                    <button id="button" type="submit">Submit Request</button>
-                </div>
-            </form>
-        </section>
-    </main>
+  <footer class="foot">
+    <section class="foot-1">
+      <p>© <span id="year"></span> Campus Connect</p>
+    </section>
+    <section class="foot-2">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="speaker.html">Speakers</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </section>
+  </footer>
 
-    <footer class="foot">
-        <section class="foot-1">
-            <p>© Campus Connect</p>
-        </section>
-        <section class="foot-2">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="speaker.html">Speakers</a></li>
-                <li><a href="register.html">Register</a></li>
-            </ul>
-        </section>
-    </footer>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
